[package]
name = "unitypackage-to-upm"
version = "0.1.0"
edition = "2021"
authors = ["nil"]
description = "Convert unitypackage files to UPM zips"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
flate2 = "1.0.24"
miette = { version = "4.7.1", features = ["fancy-no-backtrace"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[build-dependencies]
winres = "0.1.12"
